# fashion-cloud-assignment

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
architect/: README.md
code/: .gitignore  README.md  pyproject.toml  requirements.dev.txt
code/src/: exceptions.py  main.py
code/src/extractor/: exceptions.py  reader.py  schemas.py
code/src/grouper/: catalog.py  exceptions.py  utils.py
code/src/loader/: encoders.py  loader.py
code/src/transformer/: exceptions.py  transformer.py
code/tests/: conftest.py  test_e2e.py  test_integration.py
code/tests/data/input/: mappings_bonus.csv  pricat_mini.csv
code/tests/data/output/: acceptance.json  acceptance_bonus.json  acceptance_mini.json
code/tests/test_grouper/: test_catalog.py  test_utils.py
code/tests/test_transformer/: conftest.py  test_transformer.py
think/: README.md
