[tool.poetry]
name = "src"
version = "0.1.0"
description = "Take-Home assignment: code"
authors = ["Alena Konovalova <alena.kono@fastmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.8"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
fix = false
line-length = 88
exclude = [
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    ".git",
]

[tool.lint.mccabe]
max-complexity = 10

[tool.lint.pydocstyle]
convention = "google"


[tool.pytest.ini_options]
markers = ["unit", "functional", "integration", "e2e"]
xfail_strict = true


[tool.mypy]
python_version = "3.12"
pretty = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
warn_unused_configs = true
